<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ztp</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_activity_menu">Menu</string>
    <string name="top_players">Lista najlepszych</string>
    <string name="back">Wróć</string>
    <string name="reset">Rozpocznij od nowa</string>
    <string name="upgrade_reload">-25% czasu przeładowania</string>
    <string name="upgrade_additional_weapon_left">Dodatkowa broń na lewym skrzydle</string>
    <string name="upgrade_additional_weapon_right">Dodatkowa broń na prawym skrzydle</string>
    <string name="ammo_damage_upgrade">+10% do uszkodzeń</string>
    <string name="pause">Pauza</string>
    <string name="next_level">Rozpocznij następny poziom</string>
    <string name="upgrades">Ulepszenia</string>
    <string name="weapon_upgrades">Ulepszenia broni</string>
    <string name="ammo_upgrades">Ulepszenia amunicji</string>
    <string name="cost">Koszt</string>
    <string name="zero">0</string>
    <string name="save">Zapisz</string>

</resources>